syntax = "proto3";

option csharp_namespace = "Shared.Protos";

message PPlayerSelectRequest {
  int32 serverId = 1;
}

message PPlayerSelectResponse {
  int64 playerId = 1;
  string name = 2;
  PPlayerStatusInfo status = 3;
}

message PPlayerStatusInfo {
	int32 level = 1;
	int64 exp = 2;
	int32 jobId = 3;
	repeated PPlayerSkillInfo skills = 4;
	repeated PPlayerItemInfo items = 5;
}

message PPlayerSkillInfo {
	int64 playerSkillId = 1;
	int64 skillId = 2;
	int32 level = 3;
}

message PPlayerItemInfo {
	int64 playerItemId = 1;
	int32 slot = 2;
	int64 itemId = 3;
	int32 grade = 4;	
}